logs/sqlpython.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Genshi-0.7.egg-info'...
Listing './lib/python3.5/site-packages/cmd2-0.7.9.egg-info'...
Listing './lib/python3.5/site-packages/genshi'...
Listing './lib/python3.5/site-packages/genshi/filters'...
Listing './lib/python3.5/site-packages/genshi/filters/tests'...
Listing './lib/python3.5/site-packages/genshi/template'...
Listing './lib/python3.5/site-packages/genshi/template/tests'...
Listing './lib/python3.5/site-packages/genshi/template/tests/templates'...
Listing './lib/python3.5/site-packages/genshi/tests'...
Listing './lib/python3.5/site-packages/gerald'...
Compiling './lib/python3.5/site-packages/gerald/mysql_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/mysql_schema.py", line 123
    raise ValueError, "data_type parameter is mandatory"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/oracle_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/oracle_schema.py", line 243
    raise ValueError, 'Data length must be greater than zero'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/postgres_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/postgres_schema.py", line 152
    raise ValueError, 'data length must be greater than 0'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/schema.py'...
***   File "./lib/python3.5/site-packages/gerald/schema.py", line 1198
    print "This module should not be invoked from the command line"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gerald/tests'...
Compiling './lib/python3.5/site-packages/gerald/tests/test_mysql_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/tests/test_mysql_schema.py", line 512
    print self.table.indexes.items()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gerald/tests/test_oracle_schema.py'...
***   File "./lib/python3.5/site-packages/gerald/tests/test_oracle_schema.py", line 1365
    print "Getting details of Trigger %s from database" % self.trigger_name
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gerald/utilities'...
Compiling './lib/python3.5/site-packages/gerald/utilities/dburi.py'...
***   File "./lib/python3.5/site-packages/gerald/utilities/dburi.py", line 63
    raise ValueError, "Connection must include host"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gerald-0.4.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pyperclip'...
Listing './lib/python3.5/site-packages/pyperclip-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlpython'...
Compiling './lib/python3.5/site-packages/sqlpython/connections.py'...
***   File "./lib/python3.5/site-packages/sqlpython/connections.py", line 34
    raise ImportError, 'No Python database adapters installed!'
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlpython/dbapiext.py'...
***   File "./lib/python3.5/site-packages/sqlpython/dbapiext.py", line 367
    print '\n' + '=' * 80
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sqlpython/mysqlpy.py'...
***   File "./lib/python3.5/site-packages/sqlpython/mysqlpy.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlpython/plothandler.py'...
***   File "./lib/python3.5/site-packages/sqlpython/plothandler.py", line 25
    raise ValueError, 'At least one quantitative column needed to plot.'
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlpython/sqlpyPlus.py'...
***   File "./lib/python3.5/site-packages/sqlpython/sqlpyPlus.py", line 81
    print """

                          Using %s.  Note that there are better options available for %s,
                          but %s couldn't find a better one in your PATH.
                          Feel free to open up %s
                          and customize it to find your favorite %s program.

                          """ % (software, self.purpose, __file__, __file__, self.purpose)
             

                                                                                         
                                                                         
                                                 
                                                                            

                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sqlpython/sqlpython.py'...
***   File "./lib/python3.5/site-packages/sqlpython/sqlpython.py", line 88
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sqlpython-1.7.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
